[tool.poetry]
name = "etb-item-recovery-discord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-py-slash-command = "^2.3.2"
pymongo = "^3.11.4"
dnspython = "^2.1.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
